@@ -1,6 +1,6 @@
 Amarok ChangeLog
 ================
-(C) 2002-2016 the Amarok authors.
+(C) 2002-2017 the Amarok authors.
 
 VERSION 2.9.0
   FEATURES:
@@ -18,6 +18,7 @@ VERSION 2.9.0
    * Fix MPRIS2 DesktopEntry name, makes media controls in Plasma 5.7 taskbar work
      again; thanks to Antonio Rojas, Rex Dieter. (BR 365275)
    * Auto-expand after search in Collection Browser works correctly again. (BR 335217)
+   * Fix crash during MusicBrainz search. (BR 328359)
 
 
 VERSION 2.8.90
